# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

if (defined(ohos_lite)) {
  shared_library("dfx_signalhandler") {
    visibility = [ "*:*" ]

    cflags = [
      "-fPIC",
      "-Wall",
      "-fno-builtin",
      "-DDFX_NO_PRINT_LOG",
    ]

    include_dirs = [
      "include",
      "//utils/native/base/include",
      "$faultloggerd_path/common",
      "$faultloggerd_path/tools/process_dump",
      "$faultloggerd_path/interfaces/innerkits/faultloggerd_client/include",
      "$hilog_lite_include_path",
    ]
    sources = [
      "$faultloggerd_path/tools/process_dump/dfx_log.cpp",
      "dfx_signal_handler.c",
    ]

    deps = [
      "$faultloggerd_path/interfaces/innerkits/faultloggerd_client:libfaultloggerd",
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  config("dfx_signal_handler_config") {
    visibility = [ "*:*" ]

    include_dirs = [
      "include",
      "//utils/native/base/include",
      "$faultloggerd_path/common",
      "$faultloggerd_path/tools/process_dump",
      "$faultloggerd_path/interfaces/innerkits/faultloggerd_client/include",
    ]
  }

  ohos_shared_library("dfx_signalhandler") {
    public_configs = [ ":dfx_signal_handler_config" ]

    cflags = [ "-DDFX_NO_PRINT_LOG" ]

    sources = [
      "$faultloggerd_path/tools/process_dump/dfx_log.cpp",
      "dfx_signal_handler.c",
    ]

    deps = [ "$faultloggerd_path/interfaces/innerkits/faultloggerd_client:libfaultloggerd" ]

    external_deps = [ "utils_base:utils" ]
    install_images = [
      "system",
      "updater",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
