# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libhitrace_pub_config") {
  visibility = [ ":*" ]

  include_dirs = [ "include" ]
}

ohos_shared_library("libhitrace") {
  public_configs = [ ":libhitrace_pub_config" ]

  deps = [ "//base/hiviewdfx/hitrace/frameworks/native:libhitrace_source" ]

  external_deps = [ "hilog_native:libhilog" ]

  output_extension = "so"
  if (build_public_version) {
    install_enable = true
  } else {
    install_enable = false
  }

  part_name = "hitrace_native"
  subsystem_name = "hiviewdfx"
}
