# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hiappevent") {
  include_dirs = [
    "./",
    "include/",
    "//third_party/node/src",
  ]

  configs = [ "//base/hiviewdfx/hiappevent/frameworks/native/libhiappevent:libhiappevent_source_config" ]

  sources = [
    "./src/napi_hiappevent_build.cpp",
    "./src/napi_hiappevent_config.cpp",
    "./src/napi_hiappevent_init.cpp",
    "./src/napi_hiappevent_js.cpp",
    "./src/napi_hiappevent_write.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hiappevent/frameworks/native/libhiappevent:libhiappevent_base",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi:ace_napi",
  ]

  external_deps = [
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  part_name = "hiappevent_js"
  subsystem_name = "hiviewdfx"
}
